# farm-framework

./: .gitignore  .npmrc  .prettierignore  AGENT.md  AGENTS.md  BACKEND_TEMPLATE_ARCHITECTURE_SOLUTION.md  CONTRIBUTING.md  CURRENT.md  DATABASE_INTEGRATION_COMPLETE_SUMMARY.md  DATABASE_TEMPLATE_COMPLETENESS_ANALYSIS.md  Dockerfile  FARM_CONFIG_COMPARISON_ANALYSIS.md  FEATURES_EXPANSION_OVERVIEW.md  FEATURE_PLAN.md  FFFIP.md  LICENSE  MONOREPO_ARCHITECTURE_ANALYSIS.md  README.md  TASK_COMPLETION_REPORT.md  TYPE_SYNCHRONIZATION_COMPLETED.md  build_output.txt  consolidation.md  database.md  database_integration_architecture.md  debug-methods.mjs  debug-raw.js  docker-compose.dev.yml  farm.config.ts.example  fix-templates.js  m.md  package-lock.json  package.json  pnpm-workspace.yaml  testing-refactor.md  tsconfig.base.json  tsconfig.build.json  tsconfig.json  tsconfig.tsbuildinfo  turbo.json  types.md  (+2 more)
apps/api/src/: main.py  pyproject.toml
apps/api/src/ai/: __init__.py  router.py
apps/api/src/ai/providers/: __init__.py  base.py  huggingface.py  ollama.py  openai.py
apps/api/src/auth/: __init__.py  dependencies.py  middleware.py
apps/api/src/auth/models/: audit.py  rbac.py  session.py  user.py
apps/api/src/auth/services/: auth.py  token.py
apps/api/src/core/: __init__.py  auth.py  config.py  database.py  logger.py
apps/api/src/database/: __init__.py  manager.py  monitoring.py
apps/api/src/database/migrations/: manager.py
apps/api/src/models/: ai.py
apps/api/src/routes/: ai.py  websocket.py
apps/api/src/websocket/: ai_handlers.py
scripts/: README.md  (+19 more)
(+471 files in other folders)
